# logo-recognition

./: CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: logo-recognition-ci.yml
app/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  Colors.cc  Colors.h  Image.cc  Image.h  LogoRecognizer.cc  LogoRecognizer.h  Parameters.h  Segment.cc  Segment.h
tests/: CMakeLists.txt  test.cc
